Revision history for Perl extension Email::MIME.

{{$NEXT}}

1.937     2016-01-28 13:31:06-05:00 America/New_York
        - eliminate memory leak in walk_parts (again, rjbs)

1.936     2015-09-10 22:46:29-04:00 America/New_York
        - no changes since 1.935, but a stable release

1.935     2015-08-31 16:47:46-04:00 America/New_York (TRIAL RELEASE)
        - do not remove too many newlines at the end (bug introduced in 1.926)

1.934     2015-08-01 20:33:57-04:00 America/New_York
        - fix debug_structure for multipart mail with only one subpart

1.933     2015-07-25 09:30:56-04:00 America/New_York
        - correct Email::Simple prereq
        - skip omitting content-type attributes with undef value

1.932     2015-07-24 22:24:06-04:00 America/New_York
        - stable release of previous trial releases
        - see v1.930 and v1.931, below

1.931     2015-07-12 17:31:01-04:00 America/New_York (TRIAL RELEASE)
        - When doing parts_set to become single-part, do not lose the charset
          and set the mail to us-ascii.

          This is almost certainly a half measure, and this whole hunk of code
          should be improved.

1.930     2015-03-25 22:58:42-04:00 America/New_York (TRIAL RELEASE)
        - rely on the new header_raw methods in new Email::Simple

1.929     2015-02-17 09:31:35-05:00 America/New_York
        - try not to lose unrecognized content-type parameters
        - avoid copying the body content when not needed during construction

1.928     2014-12-15 21:47:49-05:00 America/New_York
        - when converting from single part to multipart, drop
          Content-Transfer-Encoding and Content-Type's charset property
        - update subparts in walk_parts if stringification changes

1.927     2014-12-04 10:19:58-05:00 America/New_York
        - add header_str_pairs; like header_pairs, but decoded
        - remove Email:MIME::Creator from synopsis

1.926     2014-01-28 23:28:41-05:00 America/New_York